<resources>
    <string name="app_name">核取方塊及卷軸</string>
    <string name="tvPtPosit">請選擇妳的工作經歷</string>
    <string name="btPtOk">確定</string>
    <string name="chbPtSalSup">業務主管</string>
    <string name="chbPtMangSup">管理主管</string>
    <string name="chbPtPersSup">人事主管</string>
    <string name="chbPtAdmSup">行政主管</string>
    <string name="chbPtSalPer">業務人員</string>
    <string name="chbPtSalEng">業務工程師</string>
    <string name="chbPtOpMang">營運管理師</string>
    <string name="chbPtAdmPer">行政人員</string>
    <string name="chbPtSenSecr">高階秘書</string>
    <string name="chbPtSalAss">業務助理</string>
</resources>